<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">靠得筑设备管理</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="loading_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="loading_view_no_data">暂无内容</string>
    <string name="loading_view_loading">加载中...</string>
    <string name="load_error_click_to_refresh">加载失败，点击重试</string>
    <string name="network_error_click_to_refresh">无可用的网络，点击重试</string>
    <string name="network_error">无用可用网络</string>
    <string name="network_error_try_again">网络出错了，请稍后重试</string>
    <string name="loading_error_try_again">加载失败，请稍后重试</string>
    <string name="loading">加载中...</string>
    <string name="loading_more">加载中...</string>
    <string name="loading_no_more">已全部加载</string>
    <string name="tip_load_data_error">对不起,无法加载数据.</string>
    <string name="Environment">uat</string>
    <string name="URLAccess">https://myd.crc.com.cn:7443/crc</string>
    <string name="URLAPPUpdate">https://app.crc.com.cn/MDM_SERVICE/appInfoDetail/getAppInfo</string>
    <string name="URLMessagePush">myd.crc.com.cn</string>
    <string name="PORTMessagePush">9000</string>
    <string name="MethodAuthentication">checkLDAPUser_v1</string>
    <string name="MethodExceptionReport">mLogService_v1</string>
    <string name="MethodMessagePush">deviceManager_v1</string>
    <string name="theme_blue">经典蓝</string>
    <string name="theme_pink">可爱粉</string>
    <string name="theme_white">简约白</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">请输入手机号码</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_company_code">请输入集团编码</string>
    <string name="action_sign_in">登录</string>
    <string name="acceptance_commit">提交</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_please_input_username">请输入手机号码！</string>
    <string name="error_please_input_rightusername">请输入正确的手机号码！</string>
    <string name="error_please_input_password">请输入密码！</string>
    <string name="please_input_code">请输入集团编码</string>
    <string name="error_please_input_rightpassword">请输入6-16位数的密码！</string>
    <string name="error_input_password_less_six">输入密码少于6位！</string>
    <string name="error_invalid_password">密码错误！</string>
    <string name="error_pwd_please_input_again">你输入的密码有误，请尝试重新输入</string>
    <string name="login_qualitycheck_hotline_text">服务热线：</string>
    <string name="login_qualitycheck_hotline_num">0755-82572006</string>
    <string name="login_proto">登录即同意使用条款及隐私政策</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="desc_check_mark">check mark</string>
    <string name="tab_workbench">工作台</string>
    <string name="tab_acceptance">验收</string>
    <string name="tab_realname_work">实名作业</string>
    <string name="tab_equipment_protect">设备维保</string>
    <string name="tab_work_control">作业监控</string>
    <string name="tab_provincestatisticsforms">省统表</string>
    <string name="tab_reportforms">统计报表</string>
    <string name="tab_tools">工具</string>
    <string name="tab_apps">应用</string>
    <string name="qualitycheck">质检</string>
    <string name="progress">进展</string>
    <string name="tab_progress">进度</string>
    <string name="tab_application">应用</string>
    <string name="apply_check">我要报验</string>
    <string name="check_record">报验记录</string>
    <string name="acceptance_operation">验收操作</string>
    <string name="offline_download">离线下载</string>
    <string name="actual_mesure">实测实量</string>
    <string name="one_house_archives">一户一档</string>
    <string name="unacceptance">未验收</string>
    <string name="acceptance">已验收</string>
    <string name="recheck">拟复验</string>
    <string name="recheck_readrecord">查看记录</string>
    <string name="acceptance_newcheck">新增检验批</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="unacceptance_accept_title">验收表</string>
    <string name="proj_info">项目信息</string>
    <string name="unaccept_accept_dpt">部位：</string>
    <string name="unaccept_accept_procedure">工序：</string>
    <string name="unaccept_accept_applytime">报验时间：</string>
    <string name="unaccept_accept_applyperson">报验人员：</string>
    <string name="construction_team">施工班组</string>
    <string name="general_contracting">总承包</string>
    <string name="specialized_contracting">专业承包</string>
    <string name="acceptance_for_describing">验收批次描述</string>
    <string name="acceptance_dominant_item">主控项目验收</string>
    <string name="acceptance_common_item">一般项目验收</string>
    <string name="acceptance_select_all">全选</string>
    <string name="acceptance_key_qualified">一键合格</string>
    <string name="acceptance_accept_result">验收结果</string>
    <string name="acceptance_dominant">主控：</string>
    <string name="acceptance_general">一般：</string>
    <string name="acceptance_overall_result">总体结果：</string>
    <string name="acceptance_accept_photo">验收图片</string>
    <string name="error_get_unacceptance">请求未验收数据失败！</string>
    <string name="please_select_proj">请选择项目</string>
    <string name="error_add_batch">新增检验批失败!</string>
    <string name="success_add_batch">新增检验批成功!</string>
    <string name="acceptance_batch_num">批次：</string>
    <string name="acceptance_qualifier">质检员：</string>
    <string name="acceptance_supervisor">监理：</string>
    <string name="accept_record">验收记录</string>
    <string name="item_no_data">(无)</string>
    <string name="acceptance_num">第</string>
    <string name="acceptance_batch">批</string>
    <string name="login_no_regist">您输入的账号还未注册！</string>
    <string name="login_pw_error">您输入的密码有误！</string>
    <string name="login_failed">网络连接失败，请检查您的网络设置</string>
    <string name="exit">退出</string>
    <string name="unlogin_failed">退出失败</string>
    <string name="get_user_operat_privileges_failed">获取权限信息失败！</string>
    <string name="project_period">请求项目期数失败！</string>
    <string name="request_weather_failed">天气请求失败！</string>
    <string name="weather_city_name">深圳</string>
    <string name="going_check_process">工序</string>
    <string name="going_check_process_error">工序请求失败!</string>
    <string name="going_check_regions_tree_error">位置信息请求失败！</string>
    <string name="going_check_inspector_error">质检员信息请求失败！</string>
    <string name="going_check_no_select_location">您还没有选择部位信息！</string>
    <string name="going_check_no_select_process">您还没有选择工序信息！</string>
    <string name="going_check_no_select_inspector">您还没有选择质检员！</string>
    <string name="going_check_success">报验成功！</string>
    <string name="going_check_failed">报验失败！</string>
    <string name="please_enter_old_pw">请输入原密码！</string>
    <string name="please_enter_old_pw_limit">请输入6-16位的原密码！</string>
    <string name="please_enter_new_pw">请输入新密码！</string>
    <string name="please_enter_new_pw_limit">请输入6-16位的新密码！</string>
    <string name="feekback_content_no_null">请填写反馈内容！</string>
    <string name="please_enter_again_new_pw">请再次输入新密码！</string>
    <string name="two_times_different">两次新密码不一致！</string>
    <string name="pw_correct_success">密码修改成功！</string>
    <string name="pw_corret_failed">密码修改失败!</string>
    <string name="change_portrait_success">头像修改成功！</string>
    <string name="change_portrait_failed">头像修改失败！</string>
    <string name="get_check_record_failed">获取报验记录失败！</string>
    <string name="no_check_record_data">暂无报验记录</string>
    <string name="get_house_chart_error">请求当前户型图数据失败</string>
    <string name="get_acceptance_list_failed">获取验收列表失败！</string>
    <string name="get_alias_empty">获取别名为空！</string>
    <string name="please_feedback_content">请输入意见反馈内容！</string>
    <string name="feedback_content_submit_error">意见内容提交失败！</string>
    <string name="feedback_submit_success">意见提交成功！</string>
    <string name="success_commit_acceptance_images">提交区域验收数据成功！</string>
    <string name="failed_commit_acceptance_images">提交区域验收数据失败！</string>
    <string name="get_hide_photos_failed">获取该区域图片失败！</string>
    <string name="delete_hide_photo_success">删除成功！</string>
    <string name="delete_hide_photo_failed">删除失败！</string>
    <string name="please_select_project_periods">请选择项目期数！</string>
    <string name="off_line_download_list_failed">获取离线下载列表失败！</string>
    <string name="no_off_line_list_data">暂无离线数据</string>
    <string name="acceptance_notice">通知</string>
    <string name="acceptance_jump">跳过</string>
    <string name="no_data">暂无数据</string>
    <string name="accept_record_failed">获取验收记录失败！</string>
    <string name="please_check_network">网络不给力，请检查网络设置</string>
    <string name="please_selectfrom_album">从手机相册选择</string>
    <string name="please_selectquery">选择查询部位</string>
    <string name="accept_record_batch_times">第%1$s批</string>
    <string name="press_again_exit_app">再按一次退出程序</string>
    <string name="no_applications_data">暂无应用</string>
    <string name="no_download_applications">暂无正在下载的应用</string>
    <string name="download_delete">删除</string>
    <string name="my_downloads">我的下载</string>
    <string name="delete_my_application_dialog">删除将删除本地下载文件\n是否确定要删除?</string>
    <string name="my_applications">我的应用</string>
    <string name="application_update">应用更新</string>
    <string name="more_applications">更多应用</string>
    <string name="no_install_applications">暂无打开应用</string>
    <string name="no_update_applications">暂无更新应用</string>
    <string name="app_number_size">(%1$d个应用，%2$.2fMB)</string>
    <string name="please_select_house">您的操作有误，请选择到户</string>
    <string name="no_task_list">暂无任务单列表</string>
    <string name="task_proceduce_batch_number">%1$s (%2$s)</string>
    <string name="task_no_notify_supervision">%1$s（未通知监理）</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinish">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="unfinished">未完成</string>
    <string name="person_message">个人信息</string>
    <string name="commit">提交</string>
    <string name="notify_supervisor">通知监理</string>
    <string name="modify_task">修改任务单</string>
    <string name="clear_ache">清理缓存</string>
    <string name="change_password">修改密码</string>
    <string name="push">推送</string>
    <string name="setup">设置</string>
    <string name="dialog_tv_title">温馨提示</string>
    <string name="dialog_msg_title">本次更新内容：</string>
    <string name="feedback">意见反馈</string>
    <string name="about">关于</string>
    <string name="changepassword">修改密码</string>
    <string name="prepassword">原密码：</string>
    <string name="newpassword">新密码：</string>
    <string name="makesurepassword">再次确认密码：</string>
    <string name="unacceptance_no_data">您暂时没有未验收数据</string>
    <string name="acceptance_no_data">您暂时还没有验收记录</string>
    <string name="reacceptance_no_data">您暂时没有复验数据</string>
    <string name="saasplatform">SaaS平台</string>
    <string name="projmanage">工程管理</string>
    <string name="IntelliEnffi">智能高效</string>
    <string name="provincestatisticsforms">省统表</string>
    <string name="login_logo_desc">专业建筑行业服务商</string>
</resources>