<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_guide_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="390dp"
            android:text="@string/app_name"
            android:textColor="@color/txt_black"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/tv_guide_small_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/login_logo_desc"
            android:textColor="@color/txt_black"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp">

            <LinearLayout
                android:id="@+id/ll_dot_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:background="@drawable/shape_dot_gray" />

                <View
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:layout_marginLeft="14dp"
                    android:background="@drawable/shape_dot_gray" />

                <View
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:layout_marginLeft="14dp"
                    android:background="@drawable/shape_dot_gray" />

                <View
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:layout_marginLeft="14dp"
                    android:background="@drawable/shape_dot_gray" />

                <View
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:layout_marginLeft="14dp"
                    android:background="@drawable/shape_dot_gray" />
            </LinearLayout>

            <View
                android:id="@+id/view_red_dot"
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:background="@drawable/shape_dot_red" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_start"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="63dp"
            android:layout_marginRight="63dp"
            android:background="@drawable/shape_button_login"
            android:text="@string/action_sign_in"
            android:textColor="@color/login_button_textcolor"
            android:textSize="@dimen/login_button_textsize" />

        <include layout="@layout/service_phone_number"></include>

    </LinearLayout>

</RelativeLayout>
