<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_titlebar_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prepassword"
                android:textColor="@color/main_title_textcolor"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_old_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textCursorDrawable="@drawable/color_cursor"
                android:inputType="textPassword"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/gainsboro" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newpassword"
                android:textColor="@color/main_title_textcolor"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_new_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:maxLength="16"
                android:textCursorDrawable="@drawable/color_cursor"
                android:inputType="textPassword"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/gainsboro" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/makesurepassword"
                android:textColor="@color/main_title_textcolor"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_confirm_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:maxLength="16"
                android:textCursorDrawable="@drawable/color_cursor"
                android:inputType="textPassword"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/gainsboro" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="密码由6～32位英文字母、数字或符号组成"
        android:textColor="#999999"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_commit"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/feedback_commit_marginleft"
        android:layout_marginRight="@dimen/feedback_commit_marginright"
        android:layout_marginTop="@dimen/setup_commit_margintop"
        android:background="@drawable/shape_button_login"
        android:text="@string/commit"
        android:textColor="@color/login_button_textcolor"
        android:textSize="@dimen/login_button_textsize"/>
</LinearLayout>
